--- a/index.html
+++ b/index.html
@@ -126,18 +126,15 @@
                     <div class="carousel-inner text-white">
                         <div class="carousel-item active">
                             <div class="row">
-                                <div style="position: absolute;z-index: 1;top: 20%;left: 20%;" class="display-1">
+                                <div style="position: absolute;z-index: 1;top: 15%;left: 20%;" class="display-1">
                                     <b>FOCUS</b>
                                 </div>
-                                <div style="position: absolute;z-index: 1;top: 30%;left: 25%;" class="display-1">
+                                <div style="position: absolute;z-index: 1;top: 25%;left: 22%;" class="display-1">
                                     <b>PHOTOGRAPHY</b>
                                 </div>
                                 <div class="col-6">
                                     <div style="margin-top: 70%;">Lorem, ipsum dolor sit amet consectetur
-                                        adipisicing elit. Accusamus, dolorem ducimus inventore deleniti maiores minima
-                                        voluptatum. Veniam quidem dolorem suscipit quia nemo ex ab laborum consequuntur!
-                                        Eius
-                                        porro itaque incidunt!<br><br>
+                                        adipisicing elit. <br><br>
                                         <h3>EXPLORE PAGES</h3><br>
                                         <h3>LEARN MORE</h3><br>
                                     </div>
