--- a/index.html
+++ b/index.html
@@ -122,19 +122,18 @@
                         <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
                     </div>
 
-                    <!-- The slideshow/carousel -->
+                   <!-- The slideshow/carousel -->
                     <div class="carousel-inner text-white">
                         <div class="carousel-item active">
                             <div class="row">
-                                <div style="position: absolute;z-index: 1;top: 15%;left: 20%;" class="display-1">
+                                <div style="position: absolute;z-index: 1;top: 15%;left: 10%;" class="display-1">
                                     <b>FOCUS</b>
                                 </div>
-                                <div style="position: absolute;z-index: 1;top: 25%;left: 22%;" class="display-1">
+                                <div style="position: absolute;z-index: 1;top: 25%;left: 15%;" class="display-1">
                                     <b>PHOTOGRAPHY</b>
                                 </div>
                                 <div class="col-6">
-                                    <div style="margin-top: 70%;">Lorem, ipsum dolor sit amet consectetur
-                                        adipisicing elit. <br><br>
+                                    <div style="margin-top: 70%;">
                                         <h3>EXPLORE PAGES</h3><br>
                                         <h3>LEARN MORE</h3><br>
                                     </div>
